--- a/powerUpArcade/about.html
+++ b/powerUpArcade/about.html
@@ -9,6 +9,20 @@
       padding-right: 5px;
       padding-left: 5px;
     }
+
+    .imgleft {
+      height:100px;
+      width: 100px;
+      object-fit: contain;
+      padding-right:50px;
+    }
+
+    .imgright {
+      height:100px;
+      width: 100px;
+      object-fit: contain;
+      padding-left:50px;
+    }
   </style>
 </head>
 <link href="Css/jtc_base.css" rel="stylesheet" />
@@ -30,11 +44,11 @@
 </header>
     <h1 style="text-align: center">INSPIRE Capstone - About</h1>
     <div class="div">
-      <a href="mission.html"><img src="Images/mission.PNG" style="width:400px;height:200px;"></a><!--<img src="Images/mission.PNG" style="width:400px;height:200px;">-->
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <a href="mission.html"><img src="Images/mission.PNG" style="width:400px;height:200px;" class ="imgleft"></a>
+      <a href="firstTeams.html"><img src="Images/firstTeams/combotsChampionship.png" style="width:400px;height:200px;" class ="imgleft"></a>
+      <a href="outreach.html"><img src="Images/outreach/firstPitch.png" style="width:400px;height:200px;" class ="imgright"></a>
+      <a href="history.html"><img src="Images/history/state.jpg" style="width:400px;height:200px;" class ="imgright"></a>
+
     </div>
 
 
