--- a/powerUpArcade/mission.html
+++ b/powerUpArcade/mission.html
@@ -40,7 +40,7 @@
     <img src="Images/home/wholeTeam.jpg" alt="teampic" class ="padding" width ="60%">
 </div>
     <p class = "font"> Our unique capstone class unites Advanced Manufacturing, Business, Computer Science, and Engineering career pathways.
-                       It is important to note that PLTW and STEM Innovator influence our daytime curriculum. We love robots and we are more
+                       It is important to note that PLTW and STEM Innovator influence our daytime curriculum. We are more
                        than robots. Our two feature capstone projects are FRC Robotics and our Clean Water for Kenya Initiative.
                     </p>
 
