--- a/powerUpArcade/projects.html
+++ b/powerUpArcade/projects.html
@@ -77,8 +77,8 @@ Your browser does not support the video tag.
                              the people of Kenya.</p>
 
   <h2 style="text-align: center">DAVENPORT WHS APP</h2>
-  <div class="width">
-    <img src="Images/projects/whsApp.webp" alt="" style="width:50%" align="middle">
+  <div class="width" align ="center">
+    <img src="Images/projects/whsApp.webp" alt="" style="width:50%" height="50%">
   </div>
   <p style="text-align:center">Davenport West Capstone students; Ryan, Austin, Jenna, Hannah, Clayton,
                                Dakota, Aaron, and Darian created an app for Davenport West. The purpose of the is to help students,
@@ -90,8 +90,8 @@ Your browser does not support the video tag.
                                We hope that when kids see the app we made they will be encouraged to learn coding language and create
                                their own app or programs. </p>
   <h2 style="text-align: center">FALCON NEST</h2>
-  <div class="width">
-    <img src="Images/projects/theNest.jpg" alt="" style="width:50%" align="middle">
+  <div class="width" align ="center">
+    <img src="Images/projects/theNest.jpg" alt="" style="width:50%" height="50%">
   </div>
   <p style="text-align:center">In the course of 2 months, Disruptive Innovation accomplished a near-home
                                goal consisting of renovating the school pantry, known as “The Nest.” The Nest is home to numerous
